adicionando mudanças no swagger e novas funcionalidades de listagem de agendamentos, pelo id do usuário e pelo id do agendamento
